# rifsalignment

./: .gitignore  README.md  setup.cfg  setup.py
src/rifsalignment/: __init__.py  algorithms.py  align_csv.py  base.py  basealign.py  ctc_align.py  datamodels.py  experiment.py  prepare_text.py  preprocess.py
src/rifsalignment/algorithms/: __init__.py  base_alignment.py  ctc_align.py
src/rifsalignment/datamodel/: __init__.py  timedsegment.py
src/rifsalignment/preprocess/: __init__.py
