[metadata]
name = rifsalignment
version = attr: rifsalignment.__version__
description = Package for segmenting the rifs datasets
long_description = file: README.md
long_description_content_type = text/markdown
author = Anders Stendevad, Emil Joensen
author_email = andst@itu.dk, eajo@itu.dk
license = MIT
license_file = LICENCE.txt
license_files =
    LICENSE.txt
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    License :: OSI Approved :: MIT LICENSE
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
install_requires =
    ctc-segmentation
    transformers
    librosa
    pydub
    torch
    num2words
    pandas

python_requires = >=3.9
package_dir =
    = src
setup_requires =
    setuptools

[options.packages.find]
where = src

[tox:tox]
envlist = py39
minversion = 3.24.5
isolated_build = True

[testenv]
deps =
    pre-commit
commands =
    - pre-commit run --all-files

[testenv:lint]
commands =
    pre-commit run --all-files

[flake8]
max-line-length = 120
per-file-ignores =
    docs/conf.py: F401
